[gd_scene load_steps=13 format=3 uid="uid://sacw76ems26f"]

[ext_resource type="Script" path="res://scripts/GameState/building_base.gd" id="1_khsfx"]
[ext_resource type="PackedScene" uid="uid://c53pblehghkug" path="res://scenes/Player/bee_leader_base.tscn" id="2_pw1sy"]
[ext_resource type="Texture2D" uid="uid://dhtit5eqgk5w7" path="res://art/YourTeam/BeeBuildings/HomeBase.png" id="3_lc4fj"]
[ext_resource type="Texture2D" uid="uid://bxb3xnhtuii66" path="res://art/SelectLight.png" id="4_dixuf"]
[ext_resource type="Texture2D" uid="uid://vollrn8221ca" path="res://art/GUI/BeeBars/Solder/Attack_Under.png" id="5_yljkn"]
[ext_resource type="Texture2D" uid="uid://ck2nc2oy2oxj5" path="res://art/GUI/BeeBars/Solder/Attack_Progress.png" id="6_wsgd5"]
[ext_resource type="Texture2D" uid="uid://ddb2b1bcxdp3p" path="res://art/GUI/BeeBars/Health_Under.png" id="7_u15yl"]
[ext_resource type="Texture2D" uid="uid://dqkpru27xaq4t" path="res://art/GUI/BeeBars/Health_Progress.png" id="8_0e7wb"]
[ext_resource type="AudioStream" uid="uid://c325cwso2xmhy" path="res://sound/level_up.mp3" id="9_vdx4s"]
[ext_resource type="AudioStream" uid="uid://cy7kbd8160gnq" path="res://sound/bee_hit.mp3" id="10_2urif"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_psmdc"]
size = Vector2(128, 129)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5b5of"]
radius = 93.0
height = 186.0

[node name="Base" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_khsfx")
spawn_time = 300
spawn_timer = 300
health = 10.0
health_max = 10.0
building_name = "Hive"
team = "Player"
create = ExtResource("2_pw1sy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_lc4fj")
hframes = 3

[node name="SelectLight" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("4_dixuf")

[node name="ActionBar" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
value = 41.0
fill_mode = 4
texture_under = ExtResource("5_yljkn")
texture_progress = ExtResource("6_wsgd5")

[node name="HealthBar" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
value = 41.0
fill_mode = 4
texture_under = ExtResource("7_u15yl")
texture_progress = ExtResource("8_0e7wb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_psmdc")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="EffectArea" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_5b5of")

[node name="Sounds" type="Node2D" parent="."]

[node name="LevelUp" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("9_vdx4s")
volume_db = -14.857

[node name="Hit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("10_2urif")
volume_db = -14.857

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
